# zero2prod-study

./: .env  Cargo.toml  README.md  configuration.yaml
.github/workflow/: general.yml
.github/workflows/: audit-on-push.yml  general.yml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
